# drone-s-middleware-soft

./: .flake8  .gitignore  .isort.cfg  Dockerfile  README.md  docker-compose.local.yml  main.py  pyproject.toml  requirements.txt
src/: exceptions.py
src/core/: settings.py
src/database/: __init__.py  config.py
src/static_schemas/: __init__.py  static.py
src/telegram_bot/: main.py  router.py
src/telegram_bot/database/: calls.py  models.py
src/telegram_bot/services/: handlers.py  keyboards.py  ws_client.py  ws_handler.py
src/telegram_bot/services/users/: __init__.py  database.py  interface.py  pickle.py
src/telegram_bot/services/ws/: __init__.py  telegram_executor.py
src/telegram_bot/services/ws/check_confirmation/: __init__.py  aioredis.py  interface.py  pickle.py
src/telegram_bot/services/ws/strategy/: __init__.py  confirmation.py  interface.py  notification.py  unknown_type_frame.py
src/telegram_bot/services/ws/validation/: __init__.py  confirmation.py  interface.py  notification.py  schemas.py  unknown_type_frame.py
src/utils/: funcs.py  pickle.py
src/websocket_server/: consumer.py  dependencies.py  router.py
src/websocket_server/services/: decorators.py
src/websocket_server/services/ws_handler/: __init__.py  interface.py  main_ws_server_receive_handler.py  ws_server_packet_handler.py
src/websocket_server/services/ws_handler/strategy/: __init__.py  command.py  interface.py  unknown_type_packet.py
src/websocket_server/services/ws_handler/validation/: __init__.py  command.py  interface.py  schemas.py  unknown_type_packet.py
